Fixed layout issues in edge

--- a/app/assets/stylesheets/ui-elements/featuredvideo.css
+++ b/app/assets/stylesheets/ui-elements/featuredvideo.css
@@ -44,6 +44,7 @@
   border-top-color: #3787bf;
   text-shadow: -1px -1px #3480b5;
   background: #3d95d3 !important;
+  min-height: 0;
 }
 
 .featured .description {
